--- a/app/src/main/res/layout/custom_controller.xml
+++ b/app/src/main/res/layout/custom_controller.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/purple_700"
+    android:background="@color/custom"
     android:gravity="center">
 
-    <LinearLayout
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -17,12 +18,12 @@
             android:layout_height="wrap_content"
             android:src="@drawable/image_play" />
 
-
         <ImageView
             android:id="@+id/exo_pause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/image_pause" />
+            android:src="@drawable/image_pause"
+            tools:visibility="invisible" />
 
-    </LinearLayout>
+
 </RelativeLayout>
