--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,9 +45,8 @@
         android:layout_height="100dp"
         android:layout_marginTop="16dp"
         android:background="@color/custom"
-        app:controller_layout_id="@layout/custom_controller"
-        app:use_controller="true"
         app:surface_type="surface_view"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,14 +76,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
-    <!--<ImageView
+    <ImageView
         android:id="@+id/im_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/image_play"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_songs"/>-->
+        app:layout_constraintTop_toBottomOf="@id/tv_songs"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
