--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.RadioKazanSings" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.RadioKazanSings" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -18,5 +18,6 @@
 
     <style name="Theme.RadioKazanSings.ToolBarStyle" parent="Widget.AppCompat.Toolbar">
         <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:fontFamily">@font/montserrat_extrabold</item>
     </style>
 </resources>
