--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,8 @@
         <item name="android:textColorSecondary">@android:color/white</item>
         <item name="android:fontFamily">@font/montserrat_extrabold</item>
     </style>
+
+    <style name="myCustomPopupTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+            <item name="android:gravity">center</item>
+    </style>
 </resources>
