--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:background="@color/custom"
         android:elevation="30dp"
         android:theme="@style/Theme.RadioKazanSings.ToolBarStyle"
-        app:layout_constraintBottom_toTopOf="@+id/ib_dislike"
+        app:layout_constraintBottom_toTopOf="@+id/ib_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <ImageView
-        android:id="@+id/ib_dislike"
+        android:id="@+id/ib_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="168dp"
@@ -64,7 +64,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ib_dislike" />
+        app:layout_constraintTop_toBottomOf="@+id/ib_logo" />
 
     <ImageView
         android:id="@+id/im_play"
@@ -77,19 +77,16 @@
         app:layout_constraintTop_toBottomOf="@id/tv_songs" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/ib_info"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="8dp"
-        android:adjustViewBounds="true"
         android:background="@color/custom"
-        android:maxWidth="50dp"
-        android:maxHeight="50dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/im_play"
         app:layout_constraintEnd_toStartOf="@+id/im_play"
         app:layout_constraintTop_toTopOf="@+id/im_play"
-        app:srcCompat="@drawable/dislike" />
+        app:srcCompat="@drawable/ib_about_uss" />
 
     <ImageButton
         android:id="@+id/ib_like"
