--- a/app/src/main/res/layout/custom_navigation_player.xml
+++ b/app/src/main/res/layout/custom_navigation_player.xml
@@ -1,52 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/custom"
-    android:layout_gravity="center">
+    android:layout_height="120dp"
+    android:minHeight="120dp"
+    android:weightSum="100"
+    android:orientation="horizontal"
+    android:background="@color/custom">
 
     <ImageView
-        android:id="@+id/im_logo"
-        android:layout_width="wrap_content"
+        android:id="@+id/iv_logo_statusbar"
+        android:layout_width="156dp"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxWidth="100dp"
-        android:maxHeight="100dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo_new" />
 
-    <ImageButton
-        android:id="@+id/b_nav_play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:adjustViewBounds="true"
-        android:background="@color/custom"
-        android:maxWidth="70dp"
-        android:maxHeight="70dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="@+id/im_logo"
-        app:layout_constraintStart_toEndOf="@+id/im_logo"
-        app:layout_constraintTop_toTopOf="@+id/im_logo"
-        app:srcCompat="@drawable/image_play" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ImageButton
-        android:id="@+id/b_nav_pause"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:adjustViewBounds="true"
-        android:background="@color/custom"
-        android:maxWidth="70dp"
-        android:maxHeight="70dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="@+id/b_nav_play"
-        app:layout_constraintStart_toEndOf="@+id/b_nav_play"
-        app:layout_constraintTop_toTopOf="@+id/b_nav_play"
-        app:srcCompat="@drawable/image_pause" />
+        <TextView
+            android:id="@+id/tv_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_extrabold"
+            android:text="@string/loading"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
 
+        <ImageButton
+            android:id="@+id/imb_play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/custom"
+            android:layout_gravity="center_vertical"
+            app:srcCompat="@drawable/image_play" />
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
