--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/custom"
     android:orientation="vertical"
-    tools:context=".Information">
+    tools:context=".InformationActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/custom_toolbar2"
@@ -75,7 +75,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="16dp"
                 android:fontFamily="@font/montserrat_extrabold"
-                android:gravity="bottom|clip_horizontal|center|clip_vertical|start|fill|fill_horizontal"
+                android:gravity="start"
                 android:text="@string/InfoAboutUs"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
