--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
         android:text="@string/loading"
         android:textColor="@color/white"
         android:textSize="16sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ib_logo" />
@@ -80,11 +81,11 @@
         android:id="@+id/ib_info"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:background="@color/custom"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/im_play"
-        app:layout_constraintEnd_toStartOf="@+id/im_play"
+        app:layout_constraintStart_toEndOf="@+id/im_play"
         app:layout_constraintTop_toTopOf="@+id/im_play"
         app:srcCompat="@drawable/ib_about_uss" />
 
@@ -101,7 +102,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/im_play"
         app:layout_constraintStart_toEndOf="@+id/im_play"
         app:layout_constraintTop_toTopOf="@+id/im_play"
-        app:srcCompat="@drawable/like" />
+        app:srcCompat="@drawable/like"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
