--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,13 +81,14 @@
         android:id="@+id/ib_info"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:background="@color/custom"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/im_play"
-        app:layout_constraintStart_toEndOf="@+id/im_play"
+        app:layout_constraintEnd_toStartOf="@+id/im_play"
         app:layout_constraintTop_toTopOf="@+id/im_play"
-        app:srcCompat="@drawable/ib_about_uss" />
+        app:srcCompat="@drawable/ib_about_uss"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageButton
         android:id="@+id/ib_like"
@@ -104,6 +105,22 @@
         app:layout_constraintTop_toTopOf="@+id/im_play"
         app:srcCompat="@drawable/like"
         android:visibility="gone"/>
+
+    <ImageButton
+        android:id="@+id/ib_share_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:adjustViewBounds="true"
+        android:background="@color/custom"
+        android:maxWidth="50dp"
+        android:maxHeight="50dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="@+id/im_play"
+        app:layout_constraintStart_toEndOf="@+id/im_play"
+        app:layout_constraintTop_toTopOf="@+id/im_play"
+        app:srcCompat="@drawable/ib_share2"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
